# playground

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  fourier-series.ipynb  pyproject.toml
playground/: RL-tic-tac-toe.ipynb  fourier-series.ipynb  just-one-more.ipynb  monty-hall.ipynb  planetary-orbits.ipynb
playground/fastapi/: main.py
