[tool.poetry]
name = "playground"
version = "0.1.0"
description = "Collection of toy problems and demonstrations"
authors = ["Litan Li <litan.li3@gmail.com>"]
readme = "README.md"
packages = [{include = "playground"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
scipy = "^1.15.0"
fastapi = {version = "^0.115.0", extras = ["standard"]}
pydantic = "^2.11.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"