[project]
name = "playground"
version = "0.1.0"
description = "Collection of toy problems and demonstrations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.1",
    "pydantic-ai[examples,logfire]>=0.0.48",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.2",
]
